working on small bugs

--- a/field-trainer/field-trainer/src/app/app.component.css
+++ b/field-trainer/field-trainer/src/app/app.component.css
@@ -80,7 +80,7 @@ div.field_cont {
     height: 8vh;
 }
 
-div.field_cont:hover + .blackBox .hoverBox {
+div.field_cont:hover ~ .blackBox .hoverBox {
     display: block;
 }
 
